--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
-<title>TipsNote : GitHub Pages Sample</title>
+<title>TipsNote : GitHub Pages </title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/2.0.4/marx.css">
 </head>
 
 <body>
 <main>
-  <h1>GitHub Pages のテストです</h1>
-  アイウエオ
+  <h1>About me</h1>
   <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
+  公立はこだて未来大学大学院のシステム情報科学研究科0年生。 <br>
+  可積分系や数理生物、量子情報などを扱うラボで生物物理をやりたがっているはみ出し者です笑。 <br>
+  一応所属は情報系なので、フロントエンド系のプログラミングや機械学習も少しずつ勉強しています。<br>
+  あと、下の画像は通学時にお世話になっている愛車です。(←どうでもいい)<br>
+  <h1>経験のある言語</h2>
+  C/C++
 </main>
 
 <script>
