--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <main>
   <h1>About me</h1>
-  <a href="http://alg-d.com/math/kan_extension/"><button>圏論</button></a> <br>
+  <a href="https://cdnjs.cloudflare.com/ajax/libs/marx/2.0.4/marx.css"><button>圏論</button></a> <br>
   公立はこだて未来大学大学院のシステム情報科学研究科0年生。 <br>
   可積分系や数理生物、量子情報などを扱うラボで生物物理をやりたがっているはみ出し者です笑。 <br>
   一応所属は情報系なので、フロントエンド系のプログラミングや機械学習も少しずつ勉強しています。<br>
