--- a/experience.html
+++ b/experience.html
@@ -12,14 +12,9 @@
   <a href="https://github.com/SyuyaAbe/gh-pages-test/edit/master/experience.html"><button>Experience</button></a> 
   <a href="https://github.com/SyuyaAbe/gh-pages-test/edit/master/skills.html"><button>Skills</button></a> <br>
   
-  <h1>Profile</h1>
-  公立はこだて未来大学大学院のシステム情報科学研究科0年生。 <br>
-  複雑系の中で、数理生物学や可積分系、量子情報などを扱うラボで生物物理をやりたがっている人間です。 <br>
-  一応所属は情報系なので、フロントエンド系のコーディング＆Webデザインや機械学習も少しずつ独学しています。<br>
-  あと、下の画像は通学時にお世話になっている自転車です。(←どうでもいい)<br>
+  <h1>Experience</h1>
+  ・筋電義手の開発
   
-  <h1>経験のある言語</h1>
-  C/C++
 </main>
 
 <script>
