--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   あと、下の画像は通学時にお世話になっている自転車です。(←どうでもいい)<br>
   <h1>経験のある言語</h1>
   C/C++
+  <h1>興味のある分野</h1>
+  数理生物学、力学系、量子情報、高次元圏と内部観測、場の量子論、ソリトン理論など
 </main>
 
 <script>
