--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>経験のある言語</h1>
   C/C++
   <h1>興味のある分野</h1>
-  数理生物学、力学系、量子情報、高次元圏と内部観測、非平衡物理、ソリトン理論、場の量子論など
+  数理生物学、非平衡物理、高次元圏と内部観測、量子情報、ソリトン理論、場の量子論など
 </main>
 
 <script>
