--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <main>
   <h1>About me</h1>
-  <a href="https://github.com/SyuyaAbe/gh-pages-test/experience.html"><button>Experience</button></a> 
-  <a href="https://github.com/SyuyaAbe/gh-pages-test/skills.html"><button>Skills</button></a>
-  <a href="https://github.com/SyuyaAbe/gh-pages-test/result.html"><button>Research achievement</button></a> <br>
+  <a href="https://syuyaabe.github.io/gh-pages-test/experience.html"><button>Experience</button></a> 
+  <a href="https://syuyaabe.github.io/gh-pages-test/skills.html"><button>Skills</button></a>
+  <a href="https://syuyaabe.github.io/gh-pages-test/result.html"><button>Research achievement</button></a> <br>
   
   <h1>Profile</h1>
   公立はこだて未来大学大学院のシステム情報科学研究科0年生。 <br>
