--- a/experience.html
+++ b/experience.html
@@ -10,8 +10,8 @@
 <main>
   <h1>About me</h1>
   <a href="https://syuyaabe.github.io/gh-pages-test/experience.html"><button>Experience</button></a> 
-  <a href="https://syuyaabe.github.io/gh-pages-test/result.html"><button>Skills</button></a>
-  <a href="https://syuyaabe.github.io/gh-pages-test/Research_achievement.html"><button>Research achievement</button></a>
+  <a href="https://syuyaabe.github.io/gh-pages-test/skills.html"><button>Skills</button></a>
+  <a href="https://syuyaabe.github.io/gh-pages-test/result.html"><button>Research achievement</button></a>
   <br>
   
   <h1>Experience</h1>
