--- a/result.html
+++ b/result.html
@@ -9,9 +9,10 @@
 <body>
 <main>
   <h1>About me</h1>
-  <a href="https://github.com/SyuyaAbe/gh-pages-test/experience.html"><button>Experience</button></a> 
-  <a href="https://github.com/SyuyaAbe/gh-pages-test/skills.html"><button>Skills</button></a>
-  <a href="https://github.com/SyuyaAbe/gh-pages-test/result.html"><button>Research achievement</button></a> <br>
+  <a href="https://syuyaabe.github.io/gh-pages-test/experience.html"><button>Experience</button></a> 
+  <a href="https://syuyaabe.github.io/gh-pages-test/skills.html"><button>Skills</button></a>
+  <a href="https://syuyaabe.github.io/gh-pages-test/result.html"><button>Research achievement</button></a>
+  <br>
   
   <h1>Research achievement</h1>
   ・特になし(2018.9時点)
