--- a/skills.html
+++ b/skills.html
@@ -18,6 +18,13 @@
   <h2>経験のある言語</h2>
   C/C++, Python , Processing, html5, CSS, JavaScript
   
+  <h2>資格</h2>
+  ・実用英語技能検定２級<br>
+  ・日本漢字能力検定２級<br>
+  ・基本情報技術者<br>
+  ・TOEIC〇〇点<br>
+  ・普通自動車運転免許(AT限定)<br>
+  
 </main>
 
 <script>
