--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,7 @@
   ・実用英語技能検定２級<br>
   ・日本漢字能力検定２級<br>
   ・基本情報技術者<br>
-  ・TOEIC〇〇点<br>
+  ・TOEIC〇〇点(随時更新中)<br>
   ・普通自動車運転免許(AT限定)<br>
   
 </main>
