--- a/result.html
+++ b/result.html
@@ -8,7 +8,7 @@
 
 <body>
 <main>
-  <h1>Research achievement</h1>
+  <h1>About me</h1>
   
   <a href="https://syuyaabe.github.io/gh-pages-test/"><button>Home</button></a> 
   <a href="https://syuyaabe.github.io/gh-pages-test/experience.html"><button>Experience</button></a> 
@@ -16,6 +16,7 @@
   <a href="https://syuyaabe.github.io/gh-pages-test/result.html"><button>Research achievement</button></a> 
   <br>
   
+  <h1>Research achievement</h1>
   ・特になし(2018.9時点)
   
   
