--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <h1>Profile</h1>
   公立はこだて未来大学大学院のシステム情報科学研究科0年生。 <br>
   数理生物学や可積分系、量子情報などを扱うラボで生物物理をやりたがっているはみ出し者です笑。 <br>
+  生命とは何か、システム的に捉えてシミュレーション、幾何化していきたい。<br>
   一応所属は情報系なので、フロントエンド系のプログラミングや機械学習も少しずつ勉強しています。<br>
   あと、下の画像は通学時にお世話になっている自転車です。(←どうでもいい)<br>
   
