--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <br>
   
   <h1>Profile</h1>
-  公立はこだて未来大学大学院のシステム情報科学研究科0年生。 <br>
+  公立はこだて未来大学大学院のシステム情報科学研究科0年生。専攻は複雑系科学。 <br>
   数理生物学や可積分系、量子情報などを扱うラボで生物物理をやりたがっているはみ出し者です笑。 <br>
   「生命とは何か」について、システム的に捉えてシミュレーションや幾何化していきたい。<br>
   一応所属は情報系なので、フロントエンド系のコーディングやWebデザイン、機械学習なども少しずつ勉強しています。<br>
