--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   あと、下の画像は通学時にお世話になっている自転車です。(←どうでもいい)<br>
   
   <h1>興味のある分野</h1>
-  数理生物学、非平衡物理、高次元圏と内部観測、量子情報、ソリトン理論、場の量子論など
+  数理生物学、非平衡物理、高次元圏と内部観測、量子情報、ソリトン理論、場の量子論など<br>
+  ↑お前本当に情報系か！？物理学科の人間じゃないのか！？というレベル
+  
 </main>
 
 <script>
