--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <a href="https://syuyaabe.github.io/gh-pages-test/experience.html"><button>Experience</button></a> 
   <a href="https://syuyaabe.github.io/gh-pages-test/skills.html"><button>Skills</button></a>
   <a href="https://syuyaabe.github.io/gh-pages-test/result.html"><button>Research achievement</button></a> 
+  
+  <img src="https://syuyaabe.github.io/gh-pages-test/bike.png">
+  
   <br>
   
   <h1>Profile</h1>
