--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
   数理生物学や可積分系、量子情報などを扱うラボで生物物理をやりたがっているはみ出し者です笑。 <br>
   「生命とは何か」について、システム的に捉えて数理モデルのシミュレーションや幾何化していきたい。<br>
   一応所属は情報系なので、フロントエンド系のコーディングやWebデザイン、機械学習なども少しずつ勉強しています。<br>
-  あと、下の画像は通学時にお世話になっている自転車です。(←どうでもいい)<br>
-  <img src="https://syuyaabe.github.io/gh-pages-test/bike.png">
+  あと、一番下の画像は通学時にお世話になっている自転車です。(←どうでもいい)<br>
+  
   
   <h1>興味のある分野</h1>
   数理生物学、非平衡物理、高次元圏と内部観測、量子情報、ソリトン理論、場の量子論など<br>
-  ↑お前本当に情報系か！？物理学科の人間じゃないのか！？というレベル
+  ↑お前本当に情報系か！？物理学科の人間じゃないのか！？というレベル<br>
+  
+  <img src="https://syuyaabe.github.io/gh-pages-test/bike.png">
+  
   
 </main>
 
