--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   数理生物学、非平衡物理、高次元圏と内部観測、量子情報、ソリトン理論、場の量子論など<br>
   ↑お前本当に情報系か！？物理学科の人間じゃないのか！？というレベル<br>
   
-  <img src="https://syuyaabe.github.io/gh-pages-test/bike.png">
+  <br><img src="https://syuyaabe.github.io/gh-pages-test/bike.png">
   
   
 </main>
