--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   
   
   <h1>興味のある分野</h1>
-  数理生物学、非平衡物理、高次元圏と内部観測、量子情報、ソリトン理論、場の量子論など<br>
+  ・生物物理(数理生物学、非平衡物理、高次元圏と内部観測など)<br>
+  ・他の分野では、量子情報、ソリトン理論、場の量子論など<br>
   ↑お前本当に情報系か！？物理学科の人間じゃないのか！？というレベル<br>
   
   <br><img src="https://syuyaabe.github.io/gh-pages-test/bike.png">
