--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,7 @@
   ・実用英語技能検定２級<br>
   ・日本漢字能力検定２級<br>
   ・基本情報技術者<br>
-  ・TOEIC600点前後(随時更新中)<br>
+  ・TOEIC600点前後(後ほど更新予定)<br>
   ・普通自動車運転免許(AT限定)<br>
   
   ・日本漢字能力検定準１級&応用情報技術者を現在勉強中<br>
