--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
   <br>
   
   <h1>Profile</h1>
-  公立はこだて未来大学大学院のシステム情報科学研究科0年生。専攻は複雑系科学。 <br>
   数理生物学や可積分系、量子情報などを扱うラボで生物物理をやりたがっているはみ出し者です笑。 <br>
   「生命とは何か」について、システム的に捉えて数理モデルのシミュレーションや幾何化していきたい。<br>
   一応所属は情報系なので、フロントエンド系のコーディングやWebデザイン、機械学習なども少しずつ勉強しています。<br>
   あと、一番下の画像は通学時にお世話になっている自転車です。(←どうでもいい)<br>
   
+  <h1>所属</h1>
+  公立はこだて未来大学大学院のシステム情報科学部4年生。専攻は複雑系科学。 2019年4月より院生。<br>
   
   <h1>興味のある分野</h1>
   ・生物物理(数理生物学、非平衡物理、高次元圏と内部観測など)<br>
