--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <h1>Profile</h1>
   安部秀哉(あべ　しゅうや)といいます。よろしくお願いします。<br>
-  <h2>自己紹介<h2> <br>
+  自己紹介 <br>
   数理生物学や可積分系、量子情報などを扱うラボで生物物理をやりたがっているはみ出し者です笑。 <br>
   「生命とは何か」について、システム的に捉えて数理モデルのシミュレーションや幾何化していきたい。<br>
   一応所属は情報系なので、フロントエンド系のコーディングやWebデザイン、機械学習なども少しずつ勉強しています。<br>
