Update and rename result.html to Research_achievement.html

--- a/Research_achievement.html
+++ b/Research_achievement.html
@@ -13,11 +13,11 @@
   <a href="https://syuyaabe.github.io/gh-pages-test/"><button>Home</button></a> 
   <a href="https://syuyaabe.github.io/gh-pages-test/experience.html"><button>Experience</button></a> 
   <a href="https://syuyaabe.github.io/gh-pages-test/skills.html"><button>Skills</button></a>
-  <a href="https://syuyaabe.github.io/gh-pages-test/result.html"><button>Research achievement</button></a> 
+  <a href="https://syuyaabe.github.io/gh-pages-test/Research_achievement.html"><button>Research achievement</button></a> 
   <br>
   
-  <h1>Research achievement</h1>
-  ・特になし(2018.9時点)
+  <h1>研究業績</h1>
+  ・特になし(2019.1月時点)
   
   
 </main>
