--- a/experience.html
+++ b/experience.html
@@ -13,7 +13,7 @@
   <a href="https://syuyaabe.github.io/gh-pages-test/"><button>Home</button></a> 
   <a href="https://syuyaabe.github.io/gh-pages-test/experience.html"><button>Experience</button></a> 
   <a href="https://syuyaabe.github.io/gh-pages-test/skills.html"><button>Skills</button></a>
-  <a href="https://syuyaabe.github.io/gh-pages-test/result.html"><button>Research achievement</button></a> 
+  <a href="https://syuyaabe.github.io/gh-pages-test/Research_achievement.html"><button>Research achievement</button></a> 
   <br>
   
   <h1>Experience</h1>
