--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
       <div class="row mar-bot40">
         <div class="col-md-offset-3 col-md-6">
           <div class="section-header">
-            <h2 class="section-heading animated" data-animation="bounceInUp">Contact us</h2>
-            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet consectetur, adipisci velit, sed quia non numquam.</p>
+            <h2 class="section-heading animated" data-animation="bounceInUp">問い合わせ</h2>
+            <p>あなたの情報と要件をご記入ください。</p>
           </div>
         </div>
       </div>
