--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <div class="col-md-6 col-md-offset-3">
 
           <div class="align-center">
-            <h2 class="slogan">私は何者か？</h2>
+            <h2 class="slogan">自己紹介</h2>
             <p>
-            数理生物学や複雑系、可積分系、さらには量子情報などが専門の指導教員の元で生物物理のモチベがやたら高い複雑系科学専攻の院生です。研究では「生命とは何か」について、生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。生涯の目標はランダウ＝リフシッツのシリーズとワインバーグの場の量子論を読破して理解することです。(←変人ですね)
+            数理生物学や複雑系、可積分系、さらには量子情報などが専門の指導教員の元で生物物理のモチベがやたら高い複雑系科学専攻の院生です。研究では「生命とは何か」について、生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。生涯の目標はランダウ＝リフシッツのシリーズとワインバーグの場の量子論を読破して理解することです(←変人ですね)。最近はそれ以外の領域として、場の量子論、一般相対論、統計物理学、流体力学、微分幾何、多様体、情報幾何、圏論、ルベーグ積分などにも興味あります。
             </p>
           </div>
         </div>
@@ -75,8 +75,9 @@
             </div>
           </div>
         </div>
-
-        <div class="col-lg-4">
+  </section>
+  <section>
+      <div class="col-lg-4">
             <!-- <i class="fa fa-code fa-5x mar-bot20"></i> -->
             <h4 class="text-bold">経歴</h4>
             <p>
@@ -86,7 +87,7 @@
             2019年度　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　入学<br>
             2021年度　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　卒業予定<br>
             </p>
-        </div>
+      </div>
 
         <br>
 
@@ -315,8 +316,8 @@
       <div class="row mar-bot40">
         <div class="col-md-offset-3 col-md-6">
           <div class="section-header">
-            <h2 class="section-heading animated" data-animation="bounceInUp">問い合わせ</h2>
-            <p>あなたの情報と要件をご記入ください。</p>
+            <h2 class="section-heading animated" data-animation="bounceInUp">Contact us</h2>
+            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet consectetur, adipisci velit, sed quia non numquam.</p>
           </div>
         </div>
       </div>
