--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             2015年度　公立はこだて未来大学　システム情報科学部　入学<br>
             2019年度　公立はこだて未来大学　システム情報科学部複雑系知能学科　卒業<br>
             2019年度　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　入学<br>
-            2021年度　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　卒業予定<br>
+            2021年度　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程修了予定<br>
             </p>
       </div>
 
