--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <div class="align-center">
             <h2 class="slogan">自己紹介</h2>
             <p>
-            数理生物学や複雑系、可積分系、さらには量子情報などが専門の指導教員の元で生物物理のモチベがやたら高い複雑系科学専攻の院生です。研究では「生命とは何か」について、生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。生涯の目標はランダウ＝リフシッツのシリーズとワインバーグの場の量子論を読破して理解することです(←変人ですね)。最近はそれ以外の領域として、場の量子論、一般相対論、統計物理学、流体力学、微分幾何、多様体、情報幾何、圏論、ルベーグ積分などにも興味あります。
-            </p>
+            数理生物学や複雑系、可積分系、さらには量子情報などが専門の指導教員の元で複雑系科学専攻の院生をしています。研究では「生命とは何か」について、生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。生涯の目標はランダウ＝リフシッツのシリーズとワインバーグの場の量子論を読破して理解することです(←変人ですね)。最近はそれ以外の領域として、場の量子論、一般相対論、統計物理学、微分幾何、多様体、情報幾何、圏論、ルベーグ積分などにも興味あります。
+            あと，このサイトはまだ作成途中です．（特に後半）</p>
           </div>
         </div>
       </div>
