--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="col-lg-4">
           <!-- <div class="align-center"> -->
             <!-- <i class="fa fa-terminal fa-5x mar-bot20"></i> -->
-            <h4 class="text-bold">学会活動・委員など</h4>
+            <h4 class="text-bold">その他の活動</h4>
             <p>
             ・生物物理若手の会北海道支部(2018.8~2021.3)
             </p>
