--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
               <article class="col-md-4 isotopeItem gisyu">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/poster22_groupB.pdf" alt="" />
+                  <img src="img/portfolio/poster22_groupB.png" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
                       <h5><a href="#">Portfolio name</a></h5>
