--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
 
               <article class="col-md-4 isotopeItem gisyu">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/gisyu.jpg" alt="" />
+                  <img src="img/portfolio/gisyu.JPG" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="img/portfolio/gisyu.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                      <a href="img/portfolio/gisyu.JPG" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                     </div>
                   </div>
                 </div>
