--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/bootstrap-theme.css">
   <link rel="stylesheet" href="css/style.css">
+  
+  <?php include(‘./confirm.php’); ?>
+  <?php include(‘./input.php’); ?>
+  <?php include(‘./thanks.php’); ?>
+
+
   <!-- skin -->
   <link rel="stylesheet" href="skin/default.css">
   <!-- =======================================================
