--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <link rel="stylesheet" href="css/bootstrap-theme.css">
   <link rel="stylesheet" href="css/style.css">
   
-  <?php include(‘./form.php’); ?>
+  <!-- <?php include(‘./form.php’); ?>
   <?php include(‘./confirm.php’); ?>
   <?php include(‘./input.php’); ?>
-  <?php include(‘./thanks.php’); ?>
+  <?php include(‘./thanks.php’); ?> -->
 
 
   <!-- skin -->
