--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 
               <article class="col-md-4 isotopeItem gisyu">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/gisyu.jpg" alt="" />
+                  <img src="img/portfolio/gisyu.JPG" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="img/portfolio/gisyu.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                      <a href="img/portfolio/gisyu.JPG" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                     </div>
                   </div>
                 </div>
@@ -203,7 +203,7 @@
 
               <article class="col-md-4 isotopeItem gisyu">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/poster22_groupB.pdf" alt="" />
+                  <img src="img/portfolio/poster22_groupB.png" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
                       <h5><a href="#">Portfolio name</a></h5>
