--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/bootstrap-theme.css">
   <link rel="stylesheet" href="css/style.css">
-  
-  <!-- <?php include(‘./form.php’); ?>
-  <?php include(‘./confirm.php’); ?>
-  <?php include(‘./input.php’); ?>
-  <?php include(‘./thanks.php’); ?> -->
-
-
   <!-- skin -->
   <link rel="stylesheet" href="skin/default.css">
   <!-- =======================================================
@@ -104,9 +97,9 @@
         <div class="col-lg-4">
           <!-- <div class="align-center"> -->
             <!-- <i class="fa fa-terminal fa-5x mar-bot20"></i> -->
-            <h4 class="text-bold">ちょっとでも経験のあるプログラミング言語</h4>
+            <h4 class="text-bold">少しでも経験のある言語やツール</h4>
             <p>
-            C, Python3 , Processing, html5, CSS, JavaScript, Ruby
+            C, Python3 , Processing, html5, CSS, JavaScript, Ruby，Photoshop, Illustrator
             </p>
           <!-- </div> -->
         </div>
@@ -182,7 +175,7 @@
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">筋電義手</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".photography">Photography</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".photography">生物物理若手の会</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".print">Print</a></li>
           </ul>
         </nav>
@@ -192,10 +185,10 @@
 
               <article class="col-md-4 isotopeItem gisyu">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/gisyu.JPG" alt="" />
+                  <img src="img/portfolio/gisyu.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="img/portfolio/gisyu.JPG" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                      <a href="img/portfolio/gisyu.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                     </div>
                   </div>
                 </div>
@@ -203,7 +196,7 @@
 
               <article class="col-md-4 isotopeItem gisyu">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/poster22_groupB.png" alt="" />
+                  <img src="img/portfolio/poster22_groupB.pdf" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
                       <h5><a href="#">Portfolio name</a></h5>
@@ -214,37 +207,13 @@
               </article>
 
 
-              <article class="col-md-4 isotopeItem photography">
+              <article class="col-md-4 isotopeItem biophysics">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/img3.jpg" alt="" />
+                  <img src="img/portfolio/gakushin.pdf" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
                       <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img3.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem print">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img4.jpg" alt="" />
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img4.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-md-4 isotopeItem photography">
-                <div class="portfolio-item">
-                  <img src="img/portfolio/img5.jpg" alt="" />
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/img5.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                      <a href="img/portfolio/gakushin.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                     </div>
                   </div>
                 </div>
@@ -321,17 +290,7 @@
         <div class="col-md-8 col-md-offset-2">
           <div class="cform" id="contact-form">
 
-            <form action="form.php" method="POST">
-              <p>名前：<input type="text" name="name"></p>
-              <p>メールアドレス：<input type="text" name="name"></p>
-              <p>メッセージ：</p>
-              <textarea name="message" rows="5" cols="40"></textarea>
-              <p>性別：
-                男性<input type="radio" name="gender" value="man">
-                女性<input type="radio" name="gender" value="woman">
-              </p>
-              <input type="submit" value="Send message">
-            </form>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1MroTCRZHwNRne5m_fZRP0jb8s4Q-3IqU1tjwNJE98EMrmA/viewform?embedded=true" width="100%" height="759" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます...</iframe>
 
           </div>
         </div>
@@ -342,7 +301,7 @@
   </section>
   <!-- map -->
   <section id="section-map" class="clearfix">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2972.37208454411!2d140.76478001489338!3d41.841817379225084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9ef614be0167fd%3A0xeb80e0a1e144c3d3!2z5YWs56uL44Gv44GT44Gg44Gm5pyq5p2l5aSn5a2m!5e0!3m2!1sja!2sjp!4v1553001790606" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2972.371898900833!2d140.76478001486348!3d41.8418213756638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9ef614be0167fd%3A0xeb80e0a1e144c3d3!2z5YWs56uL44Gv44GT44Gg44Gm5pyq5p2l5aSn5a2m!5e0!3m2!1sja!2sjp!4v1553005424918" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </section>
 
   <section id="footer" class="section footer">
@@ -368,7 +327,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Amoeba
             -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            
           </div>
         </div>
       </div>
