--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
             2015年度4月　公立はこだて未来大学　システム情報科学部　入学<br>
             2019年度3月　公立はこだて未来大学　システム情報科学部複雑系知能学科　卒業<br>
             2019年度4月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　入学<br>
-            2021年度3月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　卒業予定<br>
-            <!-- 就職後　放送大学大学院　修士選科生　入学予定<br> -->
+            2021年度3月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　卒業予定<br
             </p>
       </div>
 
