--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
               <article class="col-md-4 isotopeItem gisyu">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/poster22_groupB.pdf" alt="" />
+                  <img src="img/portfolio/poster22_groupB.png" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
                       <h5><a href="#">Portfolio name</a></h5>
@@ -208,11 +208,11 @@
 
               <article class="col-md-4 isotopeItem biophysics">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/gakushin.pdf" alt="" />
+                  <img src="img/portfolio/gakushin.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
                       <h5><a href="#">Portfolio name</a></h5>
-                      <a href="img/portfolio/gakushin.jpg" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                      <a href="img/portfolio/gakushin.pdf" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                     </div>
                   </div>
                 </div>
