--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             2015年度4月　公立はこだて未来大学　システム情報科学部　入学<br>
             2019年度3月　公立はこだて未来大学　システム情報科学部複雑系知能学科　卒業<br>
             2019年度4月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　入学<br>
-            2021年度3月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　卒業予定<br
+            2021年度3月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　卒業予定<br>
+            <!-- 就職後　放送大学大学院　修士選科生　入学予定<br> -->
             </p>
       </div>
 
@@ -230,7 +231,7 @@
                 </div>
               </article>
 
-              <article class="col-md-4 isotopeItem photography">
+              <article class="col-md-4 isotopeItem print">
                 <div class="portfolio-item">
                   <img src="img/portfolio/img8.jpg" alt="" />
                   <div class="portfolio-desc align-center">
@@ -289,7 +290,7 @@
         <div class="col-md-8 col-md-offset-2">
           <div class="cform" id="contact-form">
 
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1MroTCRZHwNRne5m_fZRP0jb8s4Q-3IqU1tjwNJE98EMrmA/viewform?embedded=true" width="100%" height="759" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます...</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1MroTCRZHwNRne5m_fZRP0jb8s4Q-3IqU1tjwNJE98EMrmA/viewform?embedded=true" width="100%" height="759" marginwidth="0">読み込んでいます...</iframe>
 
           </div>
         </div>
