--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">筋電義手</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".photography">生物物理若手の会</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".biophysics">生物物理若手の会</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".print">Print</a></li>
           </ul>
         </nav>
