--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row mar-bot40">
         <div class="col-md-3">
           <div class="team-member">
-            <figure class="member-photo"><img src="img/team/my_photo2.png" alt="" /></figure>
+            <figure class="member-photo"><img src="img/team/my_photo2.jpg" alt="" /></figure>
             <div class="team-detail">
               <h4>安部 秀哉(あべ しゅうや)</h4>
             </div>
