--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
       <div class="row mar-bot40">
         <div class="col-md-6 col-md-offset-3">
-            <h2 class="slogan">自己紹介</h2>
+            <h2 class="slogan">安部秀哉の自己紹介</h2>
             <p>
             複雑系科学専攻の院生をしています。<br>
             研究：生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。<br>
