--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             研究：生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。<br>
             生涯の目標：ランダウ＝リフシッツのシリーズとワインバーグの場の量子論を読破して理解すること <br>
             思想：物理學帝国主義<br>
-            働きながら放送大学で生物物理、場の量子論、統計物理学、数学基礎論の高みを目指す予定。
+            働きながら放送大学で生物物理、場の量子論、統計物理学などの高みを目指す予定。物性物理や数理論理学とかも学んでみたい．
             </p>
           
         </div>
