--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row mar-bot40">
         <div class="col-md-3">
           <div class="team-member">
-            <figure class="member-photo"><img src="img/team/my_photo2.jpg" alt="" /></figure>
+            <figure class="member-photo"><img src="img/team/my_photo2.png" alt="" /></figure>
             <div class="team-detail">
               
             </div>
