--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <!-- <i class="fa fa-terminal fa-5x mar-bot20"></i> -->
             <h4 class="text-bold">少しでも経験のある言語やツール</h4>
             <p>
-            C, Python3 , Processing, html, CSS, JavaScript, Ruby，Photoshop, Illustrator
+            C, Python3 , Processing, html, CSS, JavaScript, Ruby，SQL，Photoshop, Illustrator
             </p>
           <!-- </div> -->
         </div>
