--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
           <ul class="social-network social-circle">
             <li><a href="https://www.facebook.com/syuya.abe.96" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/adamu_of_FUN" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://qiita.com/adamu-of-FUN" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            <!-- <li><a href="https://qiita.com/adamu-of-FUN" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li> -->
           </ul>
         </div>
       </div>
