--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <br>
             <a href="https://github.com/SyuyaAbe/gh-pages-test/edit/master/TyorisanAndToukeirikigaku.pdf">超離散化と統計力学</a>
             <br>
-            <a href="https://github.com/SyuyaAbe/gh-pages-test/blob/master/note.pdf">内部観測で生命を考える</a>
+            <a href="https://github.com/SyuyaAbe/gh-pages-test/blob/master/note.pdf">内部観測で生命を考える</a>
             <br>
 
             </p>
@@ -225,6 +225,7 @@
                 </div>
               </article>
 
+              <!--
               <article class="col-md-4 isotopeItem print">
                 <div class="portfolio-item">
                   <img src="img/portfolio/img7.jpg" alt="" />
@@ -260,6 +261,7 @@
                   </div>
                 </div>
               </article>
+            -->
             </div>
 
           </div>
@@ -270,12 +272,14 @@
 
     </div>
   </section>
+
+  <!--
   <section id="parallax2" class="section parallax" data-stellar-background-ratio="0.5">
     <div class="align-center pad-top40 pad-bot40">
-      <blockquote class="bigquote color-white"></blockquote> <!--背景に文章-->
+      <blockquote class="bigquote color-white"></blockquote>
       <p class="color-white">Bootstraptaste</p>
     </div>
-  </section>
+  </section> -->
 
   <!-- contact -->
   <section id="section-contact" class="section appear clearfix">
