--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             複雑系科学専攻の院生をしています。<br>
             研究：生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。<br>
             生涯の目標：ランダウ＝リフシッツのシリーズとワインバーグの場の量子論を読破して理解すること <br>
-            思想：物理學帝国主義<br>
-            働きながら放送大学で生物物理、場の量子論、統計物理学などの高みを目指す予定。物性物理や数理論理学とかも学んでみたい．
+            働きながら趣味で生物物理、場の量子論、統計物理学などの勉強を続ける予定。
             </p>
           
         </div>
