--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <br>
             <a href="https://github.com/SyuyaAbe/gh-pages-test/edit/master/TyorisanAndToukeirikigaku.pdf">超離散化と統計力学</a>
             <br>
-            <a href="https://github.com/SyuyaAbe/gh-pages-test/edit/master/QuantumComputer_LT.pdf">量子コンピュータについて(LT大会スライド)</a>
+            <a href="https://drive.google.com/file/d/1aD_ClqlCud5oKNgCpMrnQiN5AAnVhlWL/view">量子コンピュータについて(LT大会スライド)</a>
             <br>
             <!-- <a href="https://github.com/SyuyaAbe/gh-pages-test/blob/master/note.pdf">内部観測で生命を考える</a> -->
             <br>
