--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">筋電義手</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".biophysics">生物物理若手の会</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".print">Print</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".print">Others</a></li>
           </ul>
         </nav>
         <div class="col-md-12">
