--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <!-- <i class="fa fa-terminal fa-5x mar-bot20"></i> -->
             <h4 class="text-bold">その他の活動</h4>
             <p>
-            <a href="http://bpwakate.net/">生物物理若手の会</a>北海道支部スタッフ(2018.8~2021.3)
+            <a href="http://bpwakate.net/">生物物理若手の会</a>スタッフ活動(2018.8~2021.3)
             </p>
           <!-- </div> -->
         </div>
