--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">筋電義手</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".research">研究</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".research">反応拡散系</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".others">Others</a></li>
           </ul>
         </nav>
@@ -262,6 +262,17 @@
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
                       <a href="img/portfolio/CoralPattern.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+              
+              <article class="col-md-4 isotopeItem research">
+                <div class="portfolio-item">
+                  <img src="img/portfolio/Fingerprint.png" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="img/portfolio/Fingerprint.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
                     </div>
                   </div>
                 </div>
