--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
       <div class="row align-center copyright">
         <div class="col-sm-12">
-          <p>2019 Copyright by Syuya Abe. All rights reserved. Theme by Amoeba.</p>
+          <p>2019 Copyright by Syuya Abe. All rights reserved. </p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
