--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         <div class="col-lg-4">
           <!-- <div class="align-center"> -->
             <!-- <i class="fa fa-terminal fa-5x mar-bot20"></i> -->
-            <h4 class="text-bold">少しでも経験のある言語やツール</h4>
+            <h4 class="text-bold">経験のある言語やツール</h4>
             <p>
-            C, Python3 , Processing, html, CSS, JavaScript, Ruby，SQL，Photoshop, Illustrator
+            C++, Python3 , Processing, html, CSS, JavaScript, PHP，SQL，Photoshop, Illustrator
             </p>
           <!-- </div> -->
         </div>
@@ -346,6 +346,11 @@
           <ul class="social-network social-circle">
             <li><a href="https://www.facebook.com/syuya.abe.96" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/adamu_of_FUN" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+            <a href="https://github.com/SyuyaAbe"
+    target="_blank"
+    title="tbpgrのGitHubページを開く">
+  <i class="fa fa-github-square" style="color: black;font-size:2em"></i>
+</a> 
             <!-- <li><a href="https://qiita.com/adamu-of-FUN" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li> -->
           </ul>
         </div>
