--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
             <p>
             <a href="http://bpwakate.net/">生物物理若手の会</a>スタッフ活動(2018.8~2021.3)
             </p>
+            <p>
+            <a href="https://syuyaabe.github.io/biophysics/index.html">生物物理の道案内</a>
+            </p>
           <!-- </div> -->
         </div>
 
