--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!-- <i class="fa fa-terminal fa-5x mar-bot20"></i> -->
             <h4 class="text-bold">経験のある言語やツール</h4>
             <p>
-            C++, Python3 , Processing, html, CSS, JavaScript, PHP，SQL，Photoshop, Illustrator
+            C++, Python3 , Processing, html, CSS, JavaScript, SQL, Photoshop, Illustrator
             </p>
           <!-- </div> -->
         </div>
@@ -133,6 +133,9 @@
             <br>
             <a href="https://github.com/SyuyaAbe/gh-pages-test/edit/master/TyorisanAndToukeirikigaku.pdf">超離散化と統計力学</a>
             <br>
+            <a href="https://qiita.com/adamu-of-FUN">Qiitaの記事</a>
+            <br>
+            <br>
             <a href="https://drive.google.com/file/d/1aD_ClqlCud5oKNgCpMrnQiN5AAnVhlWL/view">量子コンピュータについて(LT大会スライド)</a>
             <br>
             <!-- <a href="https://github.com/SyuyaAbe/gh-pages-test/blob/master/note.pdf">内部観測で生命を考える</a> -->
@@ -153,6 +156,7 @@
             <h4 class="text-bold">その他の活動</h4>
             <p>
             <a href="http://bpwakate.net/">生物物理若手の会</a>スタッフ活動(2018.8~2021.3)
+              ウェブサイト更新やサーバ作業などを担当
             </p>
           
           <!-- </div> -->
