--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             複雑系科学専攻の院生をしています。<br>
             研究：生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。<br>
             生涯の目標：ランダウ＝リフシッツのシリーズとワインバーグの場の量子論を読破して理解すること <br>
-            働きながら趣味で生物物理、場の量子論、統計物理学などの勉強を続ける予定。
+            趣味で生物物理学、量子情報理論、場の量子論、数学基礎論などの勉強を続ける予定。
             </p>
           
         </div>
