--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <div class="col-md-6 col-md-offset-3">
             <h2 class="slogan">Who are you?</h2>
             <p>
-            複雑系科学専攻の院生をしています。<br>
-            研究：生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。<br>
-            生涯の目標：ランダウ＝リフシッツのシリーズとワインバーグの場の量子論を読破して理解すること <br>
-            趣味で生物物理学、量子情報理論、場の量子論、数学基礎論などの勉強を続ける予定。
+            専攻分野：複雑系科学<br>
+            研究：生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。偏微分方程式とセルオートマトンとか。<br>
+            生涯の目標：物理学や機械学習、データ科学などのテクニックでもって自然現象の法則や原理、予測などの知見を極めたい。 <br>
+            趣味で生物物理学、機械学習、量子情報理論、場の量子論、数学基礎論などの勉強を続ける予定。
             </p>
           
         </div>
