--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             専攻分野：複雑系科学<br>
             研究：生命をシステム的に捉えて構築した数理モデルのシミュレーションをしています。偏微分方程式とセルオートマトンとか。<br>
             生涯の目標：物理学や機械学習、データ科学などのテクニックでもって自然現象の法則や原理、厳密解、予測などの知見を極めたい。 <br>
+            Email:syuya.abe@gmail.com<br>
             </p>
           
         </div>
