--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
             2019年度3月　公立はこだて未来大学　システム情報科学部複雑系知能学科　卒業<br>
             2019年度4月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　入学<br>
             2021年度3月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　卒業予定<br>
-            <!-- 就職後　放送大学大学院　修士選科生　入学予定<br> -->
             </p>
       </div>
 
@@ -155,7 +154,7 @@
             <h4 class="text-bold">その他の活動</h4>
             <p>
             <a href="http://bpwakate.net/">生物物理若手の会</a>スタッフ活動(2018.8~2021.3)
-              ウェブサイト更新やサーバ作業などを担当
+              <li><a href="http://bpwakate.net/summer2020/">第60回生物物理若手の会夏の学校スタッフ</a></li>
             </p>
           
           <!-- </div> -->
