--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">筋電義手</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".research">反応拡散系</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".research">研究周辺</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".others">Others</a></li>
           </ul>
         </nav>
@@ -217,7 +217,8 @@
                 </div>
               </article>
               
-               <article class="col-md-4 isotopeItem research">
+
+              <!-- <article class="col-md-4 isotopeItem research">
                 <div class="portfolio-item">
                   <img src="img/portfolio/turing_time5000.png" alt="" />
                   <div class="portfolio-desc align-center">
@@ -281,7 +282,7 @@
                     </div>
                   </div>
                 </div>
-              </article>
+              </article>-->
 
               
 
