--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <br>
             <a href="https://syuyaabe.github.io/biophysics/index.html">生物物理の道案内</a>
             <br>
-            <a href="https://syuyaabe.github.io/application/">電卓(スマホ向け)</a>
+            <a href="https://syuyaabe.github.io/application/">電卓(試作)</a>
             <br>
             <!-- <a href="https://github.com/SyuyaAbe/gh-pages-test/blob/master/note.pdf">内部観測で生命を考える</a> -->
               
