--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             専攻分野：複雑系科学<br>
             興味：理論生物学，非平衡物理学，データ科学，量子情報理論
             <br>
-            Email:syuya.abe@gmail.com<br>
+            Email:syuya.abe[at]gmail.com([at]は@に変更して下さい)<br>
             </p>
           
         </div>
