--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
       </div>
 
       <div class="row">
-        <nav id="filter" class="col-md-12 text-center">
+        <!-- <nav id="filter" class="col-md-12 text-center">
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">筋電義手</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">開発</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".research">研究周辺</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".others">Others</a></li>
           </ul>
@@ -308,7 +308,7 @@
         </div>
       </div>
 
-    </div>
+    </div> -->
   </section>
 
 
