--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <!-- 実用英語技能検定２級<br> -->
             <!--日本漢字能力検定２級<br> -->
             基本情報技術者<br>
-            <!--TOEIC570点<br>-->
+            JDLA Deep Learning for GENERAL 2020#2<br>
             準中型自動車運転免許(AT限定)<br>
             </p>
           <!-- </div> -->
@@ -174,15 +174,13 @@
         <div class="col-md-offset-3 col-md-6">
           <div class="section-header">
             <h2 class="section-heading animated" data-animation="bounceInUp">ポートフォリオ</h2>
-            <p>
-
-            </p>
+            <p>工事中</p>
           </div>
         </div>
       </div>
 
       <div class="row">
-        <!-- <nav id="filter" class="col-md-12 text-center">
+        <!--200803 <nav id="filter" class="col-md-12 text-center">
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">開発</a></li>
@@ -308,7 +306,7 @@
         </div>
       </div>
 
-    </div> -->
+    </div> 200803-->
   </section>
 
 
