--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </div>
               </article>
 
-            <p>工事中</p>
+            <p>工事中</p>200803-->
               
             </div>
 
@@ -307,7 +307,7 @@
         </div>
       </div>
 
-    </div> 200803-->
+    </div>
   </section>
 
 
