--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <!-- 実用英語技能検定２級<br> -->
             <!--日本漢字能力検定２級<br> -->
             基本情報技術者<br>
-            JDLA Deep Learning for GENERAL 2020#2<br>
+            <!--TOEIC570点<br>-->
             準中型自動車運転免許(AT限定)<br>
             </p>
           <!-- </div> -->
@@ -132,13 +132,13 @@
             <br>
             <a href="https://github.com/SyuyaAbe/gh-pages-test/edit/master/TyorisanAndToukeirikigaku.pdf">超離散化と統計力学</a>
             <br>
-            <a href="https://qiita.com/adamu-of-FUN">Qiitaの記事</a>
+            <a href="https://qiita.com/syuya_abe">Qiitaの記事</a>
             <br>
             <a href="https://drive.google.com/file/d/1aD_ClqlCud5oKNgCpMrnQiN5AAnVhlWL/view">量子コンピュータについて(LT大会スライド)</a>
             <br>
             <a href="https://syuyaabe.github.io/biophysics/index.html">生物物理の道案内</a>
             <br>
-            <a href="https://syuyaabe.github.io/application/">電卓(試作)</a>
+            <a href="https://syuyaabe.github.io/application/">電卓(試製)</a>
             <br>
             <!-- <a href="https://github.com/SyuyaAbe/gh-pages-test/blob/master/note.pdf">内部観測で生命を考える</a> -->
               
@@ -174,16 +174,18 @@
         <div class="col-md-offset-3 col-md-6">
           <div class="section-header">
             <h2 class="section-heading animated" data-animation="bounceInUp">ポートフォリオ</h2>
-            <p>工事中</p>
+            <p>
+
+            </p>
           </div>
         </div>
       </div>
 
       <div class="row">
-        <!--200803 <nav id="filter" class="col-md-12 text-center">
+        <nav id="filter" class="col-md-12 text-center">
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">開発</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">筋電義手</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".research">研究周辺</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".others">Others</a></li>
           </ul>
@@ -296,8 +298,7 @@
                   </div>
                 </div>
               </article>
-
-            <p>工事中</p>200803-->
+            -->
               
             </div>
 
