--- a/index.html
+++ b/index.html
@@ -218,17 +218,19 @@
               </article>
               
 
-              <!-- <article class="col-md-4 isotopeItem research">
+            　 <article class="col-md-4 isotopeItem research">
                 <div class="portfolio-item">
-                  <img src="img/portfolio/turing_time5000.png" alt="" />
+                  <!-- <img src="img/portfolio/turing_time5000.png" alt="" /> -->
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="img/portfolio/turing_time5000.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+                      非公開中
+                      <!-- <a href="img/portfolio/turing_time5000.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a> -->
                     </div>
                   </div>
                 </div>
               </article>
               
+              <!--
               <article class="col-md-4 isotopeItem research">
                 <div class="portfolio-item">
                   <img src="img/portfolio/SpiralsDense.png" alt="" />
