--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   <!-- <img src="img/portfolio/turing_time5000.png" alt="" /> -->
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      非公開中
+                      <p>非公開中</p>
                       <!-- <a href="img/portfolio/turing_time5000.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a> -->
                     </div>
                   </div>
