--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".gisyu">筋電義手</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".research">研究周辺</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".research">研究周辺(非公開中)</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".others">Others</a></li>
           </ul>
         </nav>
@@ -223,7 +223,6 @@
                   <!-- <img src="img/portfolio/turing_time5000.png" alt="" /> -->
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <p>非公開中</p>
                       <!-- <a href="img/portfolio/turing_time5000.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a> -->
                     </div>
                   </div>
