--- a/index.html
+++ b/index.html
@@ -81,14 +81,18 @@
   <section>
       <div class="col-lg-4">
             
-            <!-- <h4 class="text-bold">経歴</h4>
+            <h4 class="text-bold">経歴</h4>
             <p>
-            2015年度3月　私立中央学院高等学校　普通科S特進コース　卒業<br>
+            学歴<br>
             2015年度4月　公立はこだて未来大学　システム情報科学部　入学<br>
             2019年度3月　公立はこだて未来大学　システム情報科学部複雑系知能学科　卒業<br>
             2019年度4月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　入学<br>
-            2021年度3月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　卒業予定<br>
-            </p>-->
+            2021年度3月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　修了<br>
+            </p>
+            <p>
+            学歴<br>
+            2021年度4月　新卒入社でエンタメ系大企業のデータサイエンスの部署にて従事<br>
+            </p>
       </div>
 
         <br>
