--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             2021年度3月　公立はこだて未来大学大学院　システム情報科学研究科　博士前期課程　修了<br>
             </p>
             <p>
-            学歴<br>
+            職歴<br>
             2021年度4月　新卒入社でエンタメ系大企業のデータサイエンスの部署にて従事<br>
             </p>
       </div>
@@ -346,9 +346,10 @@
     </div>
   </section>
   <!-- map -->
+  <!--
   <section id="section-map" class="clearfix">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2972.371898900833!2d140.76478001486348!3d41.8418213756638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9ef614be0167fd%3A0xeb80e0a1e144c3d3!2z5YWs56uL44Gv44GT44Gg44Gm5pyq5p2l5aSn5a2m!5e0!3m2!1sja!2sjp!4v1553005424918" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </section>
+  </section>　-->
 
   <section id="footer" class="section footer">
     <div class="container">
