--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           <div class="section-header">
             <h2 class="section-heading animated" data-animation="bounceInUp">お問い合わせ</h2>
             <p>
-            お問い合わせはこちらに記入をお願い致します。
+            お問い合わせはTwitterのDMまたはこちらのフォームに記入をお願い致します。副業等のご提案も受けつけております。
             </p>
           </div>
         </div>
@@ -356,12 +356,9 @@
       <div class="row animated opacity mar-bot20" data-andown="fadeIn" data-animation="animation">
         <div class="col-sm-12 align-center">
           <ul class="social-network social-circle">
-            <li><a href="https://www.facebook.com/syuya.abe.96" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/adamu_of_FUN" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-            <a href="https://github.com/SyuyaAbe"
-    target="_blank"
-    title="tbpgrのGitHubページを開く">
-  <i class="fa fa-github-square" style="color: black;font-size:2em"></i>
+            <a href="https://github.com/SyuyaAbe" target="_blank" title="tbpgrのGitHubページを開く">
+            <i class="fa fa-github-square" style="color: black;font-size:2em"></i>
 </a> 
             <!-- <li><a href="https://qiita.com/adamu-of-FUN" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li> -->
           </ul>
