--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <!-- <i class="fa fa-terminal fa-5x mar-bot20"></i> -->
             <h4 class="text-bold">経験のある言語やツール</h4>
             <p>
-            C++, Python3 , R, Processing, html, CSS, JavaScript, SQL, Photoshop, Illustrator
+            C++, Python3 , R, Processing, html, CSS, JavaScript, SQL, LaTeX, Photoshop, Illustrator
             </p>
           <!-- </div> -->
         </div>
