--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <br>
             <a href="https://syuyaabe.github.io/calculator/">電卓(試製)</a>
             <br>
-            <!-- <a href="https://github.com/SyuyaAbe/gh-pages-test/blob/master/note.pdf">内部観測で生命を考える</a> -->
+            <a href="https://ci.nii.ac.jp/author?q=%E5%AE%89%E9%83%A8%E7%A7%80%E5%93%89&count=&sortorder=">その他和文献</a>
               
             </p>
           <!-- </div> -->
